--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,11 +1,18 @@
 {
   "manifest_version": 2,
-  "name": "ExtraJS",
-  "description": "This extension injects extra JavaScript (e.g. to help with development and debugging) into every page.",
+  "name": "Web Injector",
+  "short_name": "W{I}",
+  "author": "Trevor Reed",
+  "description": "Inject JavaScript code into every page (e.g. to help with debugging). For example, make your own wrapper for console logging.",
   "version": "1.0",
   "permissions":[
     "storage"
   ],
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png" 
+  },
   "background": {
     "persistent": false,
     "scripts": ["jquery.min.js","bg.js"]
